Changelog
=========


3.0.4 (unreleased)
------------------

- Nothing changed yet.


3.0.3 (2020-10-10)
------------------

- Do not depend anymore on argparse because it is already included in
  Python 2.7 and in Python 3 since version 3.2
  Fixes `issue 209 <https://github.com/4teamwork/ftw.upgrade/issues/209>`.
  [ale-rt]


3.0.2 (2020-08-27)
------------------

- Properly compute ``find_start_version`` when the profile has combined
  upgrade steps
  Fixes `issue 207 <https://github.com/4teamwork/ftw.upgrade/issues/207>`. [ale-rt]
- Check for six.binary_type to avoid AttributeErrors when running under Python3.
  [erral]


3.0.1 (2020-06-09)
------------------

- This Plone add-on now requires six >= 1.12.0. [mbaechtold]
- Instance port number discovery in ``wsgi.ini`` works also when the fast listen
  option is choosen.
  Fixes `issue 200 <https://github.com/4teamwork/ftw.upgrade/issues/200>`. [ale-rt]

- The plone_upgrade subcommand does not break on Python3
  Fixes `issue 202 <https://github.com/4teamwork/ftw.upgrade/issues/202>`. [ale-rt]

- Remove a bunch of deprecation warnings
  Fixes `issue 204 <https://github.com/4teamwork/ftw.upgrade/issues/204>`. [ale-rt]


3.0.0 (2020-03-23)
------------------

- Add support for Plone 5.2 and Python 3. [buchi]
- Also look for the instance port number in ``wsgi.ini``.  [maurits]


2.16.0 (2020-02-14)
-------------------

- Allow additional indexes to be reindexed in the WorkflowChainUpdater. [tinagerber]


2.15.2 (2020-01-27)
-------------------

- Fix missing values in IntIds catalog as we go within migrate_intid(). [djowett-ftw]


2.15.1 (2019-12-16)
-------------------

- Cleanup broken catalog brains on `NotFound`. [jone]


2.15.0 (2019-12-12)
-------------------

- Add context manager for disabling upgrade step marking. [jone]

- Do not mark upgrade steps as installed when not doing a full import. [jone]


2.14.1 (2019-11-08)
-------------------
