@@ -7,11 +7,15 @@ from Products.GenericSetup.upgrade import normalize_version
 from six.moves import filter
 from six.moves import map
 
-import imp
 import inspect
 import os.path
 import re
 import six
+
+if six.PY2:
+    import imp
+else:
+    import importlib
 
 
 UPGRADESTEP_DATETIME_REGEX = re.compile(r'^.*/?(\d{14})[^/]*/upgrade.py$')
@@ -24,7 +28,8 @@ class Scanner(object):
         self.directory = directory
 
     def scan(self):
-        self._load_upgrades_directory()
+        if six.PY2:
+            self._load_upgrades_directory()
         infos = list(map(self._build_upgrade_step_info,
                          self._find_upgrade_directories()))
         infos.sort(key=lambda info: normalize_version(info['target-version']))
@@ -37,7 +42,10 @@ class Scanner(object):
                            glob('{0}/*/upgrade.py'.format(self.directory))))
 
     def _build_upgrade_step_info(self, path):
-        title, callable = self._load_upgrade_step_code(path)
+        if six.PY2:
+            title, callable = self._load_upgrade_step_code_py27(path)
+        else:
+            title, callable = self._load_upgrade_step_code(path)
         return {'source-version': None,
                 'target-version':
                     UPGRADESTEP_DATETIME_REGEX.match(path).group(1),
@@ -49,7 +57,7 @@ class Scanner(object):
         second['source-version'] = first['target-version']
         return second
 
-    def _load_upgrade_step_code(self, upgrade_path):
+    def _load_upgrade_step_code_py27(self, upgrade_path):
         path = os.path.dirname(upgrade_path)
 
         try:
@@ -66,7 +74,7 @@ class Scanner(object):
                          'upgrade'))
 
         module = imp.load_module(name, fp, pathname, description)
-        upgrade_steps = tuple(self._find_upgrade_step_classes_in_module(
+        upgrade_steps = tuple(self._find_upgrade_step_classes_in_module_py27(
                 module))
 
         if len(upgrade_steps) == 0:
@@ -81,7 +89,7 @@ class Scanner(object):
 
         return upgrade_steps[0]
 
-    def _find_upgrade_step_classes_in_module(self, module):
+    def _find_upgrade_step_classes_in_module_py27(self, module):
         for name, value in inspect.getmembers(module, inspect.isclass):
             if not issubclass(value, UpgradeStep):
                 continue
@@ -89,6 +97,38 @@ class Scanner(object):
             if inspect.getmodule(value) is not module:
                 continue
 
+            title = subject_from_docstring(inspect.getdoc(value) or name)
+            title = six.ensure_text(title)
+            yield (title, value)
+
+    def _load_upgrade_step_code(self, upgrade_path):
+        spec = importlib.util.spec_from_file_location(".", upgrade_path)
+        module = importlib.util.module_from_spec(spec)
+        spec.loader.exec_module(module)
+
+        upgrade_steps = tuple(self._find_upgrade_step_classes_in_module(
+                module))
+
+        if len(upgrade_steps) == 0:
+            raise UpgradeStepDefinitionError(
+                'The upgrade step file {0} has no upgrade class.'.format(
+                    upgrade_path
+                )
+            )
+
+        if len(upgrade_steps) > 1:
+            raise UpgradeStepDefinitionError(
+                'The upgrade step file {0} has more than one upgrade class.'.format(  # noqa: E501
+                    upgrade_path
+                )
+            )
+
+        return upgrade_steps[0]
+
+    def _find_upgrade_step_classes_in_module(self, module):
+        for name, value in inspect.getmembers(module, inspect.isclass):
+            if value == UpgradeStep or not issubclass(value, UpgradeStep):
+                continue
             title = subject_from_docstring(inspect.getdoc(value) or name)
             title = six.ensure_text(title)
             yield (title, value)
